--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
-<<<<<<< HEAD
 :root {
   --basic-black: #000000;
   --basic-light-black: #283136;
   --basic-white: #FFFFFF;
   --basic-grey: #666666;
   --basic-dark-grey: #444444;
+  --basic-red: #FB565A;
+  --basic-green: #00CA74;
+  --basic-yellow: #EFC849;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, Ariel, sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
   color: var(--basic-light-black);
   background-color: var(--basic-white);
-
 }
 
 a {
@@ -29,8 +30,25 @@ img {
   height: auto;
 }
 
+.header-link {
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.feature-link {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  background-color: var(--basic-red);
+  color: var(--basic-white);
+  width: 253.28px;
+  height: 48.03px;
+  left: 76px;
+  border-radius: 3px;
+}
+
 .feature-menu {
-    list-style: none;
+  list-style: none;
 }
     
 .caption {
@@ -39,61 +57,115 @@ img {
   color: var(--basic-black);
 }
 
-.feuture-list {
-  list-style: none;
-}
-
-.feuture-item h2 {
-  font-size: 40px;
+.caption-2 {
+  font-size: 24px;
   line-height: 30px;
-}
-=======
-:root {
-  --basic-black: #000000;
-  --basic-light-black: #283136;
-  --basic-white: #FFFFFF;
-  --basic-grey: #666666;
-  --basic-dark-grey: #444444;
+  color: var(--basic-black);
+  text-transform: uppercase;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, Ariel, sans-serif;
+.button-red {
+  background-color: var(--basic-red);
+  color: var(--basic-white);
+  height: 50px;
+  left: 140px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.button-green {
+  background-color: var(--basic-green);
+  color: var(--basic-white);
+  height: 50px;
+  left: 140px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.button-yellow {
+  background-color: var(--basic-yellow);
+  color: var(--basic-white);
+  height: 50px;
+  left: 140px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.caption-3 {
+  font-size: 45px;
+  line-height: 45px;
+  color: var(--basic-black);
+}
+
+.caption-4, figcaption {
   font-size: 16px;
   line-height: 24px;
-  font-weight: 700;
-  color: var(--basic-light-black);
-  background-color: var(--basic-white);
-
-}
-
-a {
-  text-decoration: none;
+  text-transform: uppercase;
   color: var(--basic-black);
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.feature-menu {
-    list-style: none;
-}
-    
-.caption {
-  font-size: 55px;
-  line-height: 55px;
+.benefit-item h3{
+  font-size: 45px;
+  line-height: 64px;
   color: var(--basic-black);
 }
 
-.feuture-list {
-  list-style: none;
+.benefit-item p {
+  font-size: 16px;
+  line-height: 18px;
 }
 
-.feuture-item h2 {
-  font-size: 40px;
+.footer-contacts h2{
+  font-size: 18px;
   line-height: 30px;
+  color: var(--basic-black);
+  text-transform: uppercase;
 }
->>>>>>> 51c2e196bace41477eb767df85cf13d87712cdb4
+
+.footer-contacts p {
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--basic-dark-grey);
+}
+
+.footer-phone {
+  text-decoration: none;
+  color: var(--basic-light-black);
+}
+
+.button-footer {
+  background-color: var(--basic-red);
+  color: var(--basic-white);
+  height: 50px;
+  left: 140px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.modal-popup h2{
+  font-size: 45px;
+  line-height: 53px;
+  color: var(--basic-black);
+}
+
+.footer-text h2{
+  font-size: 36px;
+  line-height: 36px;
+  color: var(--basic-black);
+}
+
+.footer-text p {
+  font-size: 16px;
+  line-height: 22px;
+  color: var( --basic-dark-grey);
+}
+
+
